argocd/apps/prod-k8s/1-applications/topomojo/kustomize/base/console-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: topomojo-console-ingress
  annotations:
    cert-manager.io/cluster-issuer: ca-issuer
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/server-snippet: |
      location ~ /connect/ticket/(.+) {
        proxy_pass https://$arg_vmhost/ticket/$1;
        proxy_set_header Upgrade $http_upgrade;
        proxy_set_header Connection "upgrade";
        proxy_request_buffering off;
        proxy_buffering off;
        proxy_read_timeout 86400s;
        proxy_send_timeout 86400s;
        proxy_ssl_session_reuse on;
      }
spec:
  rules:
  - host: crucible.io
    http:
      paths:
      - path: /dummy(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: appliance-topomojo-api
            port:
              number: 80

    
  tls:
  - secretName: topomojo-console-tls
    hosts:
      - crucible.io
